Make sure BeanFactory is available
Closes gh-1121